# App

./: build.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/drawingapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  drawingapp.cpp
app/src/main/java/com/example/drawingapp/: CanvasFragmentComp.kt  Drawing.kt  DrawingApplication.kt  DrawingJNI.kt  DrawingView.kt  DrawingViewModel.kt  DrawingsDatabase.kt  EntireDrawingScreenFragment.kt  GalleryFragment.kt  MainActivity.kt  drawingsRepository.kt
app/src/main/res/layout/: edit_text_dialog.xml  fragment_canvas.xml  fragment_gallery.xml  pen_size_dialog.xml
app/src/main/res/layout-land/: fragment_entire_drawing_screen.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
